--- a/product-microservice.yml
+++ b/product-microservice.yml
@@ -1,39 +1,63 @@
 spring:
   application:
     name: product-microservice
-  cloud:
-    config:
-      uri: http://localhost:8888
-      import: "optional:configserver:"
-      import-check:
-        enabled: false
-  eureka:
-    client:
-      service-url:
-        defaultZone: http://localhost:8761/eureka/
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/product_microservice
+    username: root
+    password:
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MariaDBDialect
 
 server:
   port: 8081
+
+axon:
+  axonserver:
+    servers: localhost:8124
+    context: default
+  eventstore:
+    jpa:
+      schema-generation:
+        enabled: true
+  eventhandling:
+    processors:
+      user:
+        mode: tracking
+        source: eventStore
+        initial-segment-count: 1
+
+axoniq:
+  axonserver:
+    force-direct-connection: true
 
 management:
   endpoints:
     web:
       exposure:
-        include: info,health
-  tracing:
-    sampling:
-      probability: 1.0
-zipkin:
-  endpoint: http://localhost:9411/api/v2/spans
-resilience4j:
-  retry:
-    instances:
-      myRetry:
-        max-attempts: 3
-        wait-duration: 500ms
-  rate-limiter:
-    instances:
-      myRateLimiter:
-        limit-for-period: 5
-        limit-refresh-period: 1s
-        timeout-duration: 500ms
+        include: info,health,prometheus
+  endpoint:
+    info:
+      enabled: true
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+
+logging:
+  level:
+    root: INFO
+    org.springframework.web: DEBUG
+    com.netflix.loadbalancer: DEBUG
+    org.springframework.web.client.RestTemplate: DEBUG
+
+ribbon:
+  eureka:
+    enabled: false
+  listOfServers: localhost:8083,localhost:8084
