--- a/user-microservice.yml
+++ b/user-microservice.yml
@@ -61,3 +61,19 @@ ribbon:
 axoniq:
   axonserver:
     force-direct-connection: true
+
+
+
+resilience4j:
+  retry:
+    instances:
+      myRetry:
+        max-attempts: 3
+        wait-duration: 500ms
+
+  rate-limiter:
+    instances:
+      myRateLimiter:
+        limit-for-period: 5
+        limit-refresh-period: 1s
+        timeout-duration: 500ms
